# MDS

./: .gitignore  LICENSE.md  README.md
.github/workflows/: StaticAnalysis.yml  Testing.yml
backend/: pyproject.toml
backend/server/: database.md  database.py  log.py  main.py
backend/tests/: test_passwords.py
client/: chat.css  chat.html  chat.js  connection.js  formular.css  formular.js  index.html  message.css  signin.js  signup.js
media/: UML_MDS  UML_MDS_Server
scripts/: flake8.sh  python-env.scm  tests.sh  uvicorn.sh
