[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <example@email.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
