[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Alexandru Ică", "Gherghina Roxana-Ioana", "Arsene Marinel", "Cioarec George", "Tudose Mihai Cristian"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "*"
uvicorn = "0.13.4"
websockets = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
